# particle-life

./: .gitignore  Cargo.toml  README.md  TRAIL_VERIFICATION_CHECKLIST.md  combined_project_dump.txt  trail_line.wgsl
src/: crash_profile.rs  main.rs  selection.rs
src/renderer/: compute.rs  draw.rs  mod.rs
src/renderer/shaders/: compute.wgsl  fade.wgsl  fragment.wgsl  particle_physics.wgsl  reactions.wgsl  trail_capture.wgsl  trail_line.wgsl  vertex.wgsl
src/sim/: book.rs  mod.rs  physics.rs  world.rs
src/ui/: book_ui.rs  debug_ui.rs  matrix_ui.rs  mod.rs  selection_ui.rs  trace_ui.rs
